fixed image stretch

--- a/index.css
+++ b/index.css
@@ -225,7 +225,7 @@ a:hover, a:focus, #i-learned:hover {
         text-align: center;
     }
 
-    img {
+    .containerOne img {
         width:100%;
 
     }
